--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
     "git": "^0.1.5",
+    "googleapis": "^95.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-scripts": "5.0.0",
     "rm": "^0.1.8",
     "web-vitals": "^2.1.4",
