--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-google-picker": "^0.1.0",
     "react-scripts": "5.0.0",
     "rm": "^0.1.8",
     "web-vitals": "^2.1.4",
