--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@googleapis/docs": "^0.2.0",
+    "@rpldy/upload-button": "^0.17.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@uppy/core": "^2.1.5",
+    "@uppy/dashboard": "^2.1.4",
+    "@uppy/react": "^2.1.2",
+    "@uppy/tus": "^2.2.0",
+    "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
+    "coffe-script": "^0.0.1-security",
+    "drive": "^0.1.3",
+    "drive-uploady": "^0.2.5",
+    "fs": "^0.0.1-security",
+    "gapi": "^0.0.3",
+    "gapi-script": "^1.2.0",
     "gh-pages": "^3.2.3",
     "git": "^0.1.5",
     "googleapis": "^95.0.0",
+    "http2": "^3.3.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
